move scrollbar styling to actual JobItem container to fix corner styling

--- a/frontend/src/components/Dashboard/DashboardItemJobIndex/DashboardItemJobIndex.scss
+++ b/frontend/src/components/Dashboard/DashboardItemJobIndex/DashboardItemJobIndex.scss
@@ -9,21 +9,6 @@
     flex-direction: column;
     align-items: center;
     border-radius: 10px;
-    overflow-y: scroll;
-    overflow-x: hidden;
-}
-
-.dashboard-item-job-index-container::-webkit-scrollbar {
-  width: 8px;
-}
-
-.dashboard-item-job-index-container::-webkit-scrollbar-track {
-    background-color: rgb(246, 246, 246);
-}
-
-.dashboard-item-job-index-container::-webkit-scrollbar-thumb {
-    background-color: #000;
-    border-radius: 5px;
 }
 
 .dashboard-item-header {
@@ -36,4 +21,19 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
+
+.job-index-container::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  .job-index-container::-webkit-scrollbar-track {
+      background-color: rgb(246, 246, 246);
+  }
+  
+  .job-index-container::-webkit-scrollbar-thumb {
+      background-color: #000;
+      border-radius: 5px;
+  }
